[tool.poetry]
name = "openeo-fastapi"
version = "2024.3.2"
description = "FastApi implementation conforming to the OpenEO Api specification."
authors = ["Sean Hoyal <sean.hoyal@external.eodc.eu>"]
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
fastapi = "^0.95.1"
pydantic = "<2"
attrs = "^23.1.0"
httpx = "^0.24.1"
aiohttp = ">3.9"
pystac-client = ">=0.7.5"
openeo-pg-parser-networkx = ">=2024.1.1"
openeo-processes-dask = ">=2023.11.6"
odc-stac = ">=0.3.8"
dask-geopandas = ">=0.3.1"
rioxarray = ">=0.15.0"
xvec = ">=0.2.0"
joblib = ">=1.3.2"
planetary_computer = ">=1.0.0"
stackstac = ">=0.5.0"
stac-validator = ">=3.3.2"
pip = "^23.3.2"
requests = "^2.31.0"
SQLAlchemy = "^2.0.27"
psycopg2-binary = "^2.9.5"
alembic = "^1.13.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
ipykernel = "^6.15.1"
pre-commit = "^2.20.0"
pytest-cov = "^4.0.0"
pytest-asyncio = "^0.23.0"
aioresponses = "^0.7.5"
pytest-postgresql = ">=4.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
