[tool.poetry]
name = "openeo-fastapi"
version = "2024.10.1"
description = "FastApi implementation conforming to the OpenEO Api specification."
authors = ["Sean Hoyal <sean.hoyal@external.eodc.eu>"]
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pip = "^23.3.2"
alembic = "^1.13.1"
uvicorn = "^0.29.0"
fastapi = "^0.95.1"
pydantic = "<2"
attrs = "^23.1.0"
httpx = "^0.27.0"
aiohttp = ">3.9"
pystac-client = ">=0.7.5"
openeo-pg-parser-networkx = ">=2024.1.1"
openeo-processes-dask = ">=2023.11.6"
joblib = ">=1.3.2"
requests = "^2.31.0"
SQLAlchemy = "^2.0.27"
fsspec = "^2024.3.1"
psycopg2-binary = "^2.9.5"
click = "8.1.7"
python-jose = "^3.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
ipykernel = "^6.15.1"
pre-commit = "^2.20.0"
pytest-cov = "^4.0.0"
pytest-asyncio = "^0.23.0"
aioresponses = "^0.7.5"
pytest-postgresql= ">=4.1.1"
pydoc-markdown = "4.8.2"


[tool.poetry.scripts]
openeo_fastapi = "openeo_fastapi.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
